[package]
name = "kadcast"
authors = [
  "herr-seppia <seppia@dusk.network>"
]
version = "0.4.0-rc.5"
edition = "2018"
description ="Implementation of the Kadcast Network Protocol."
categories = ["network-programming"]
keywords = ["p2p", "network", "kad", "peer-to-peer", "kadcast"]
license = "MPL-2.0"
repository = "https://github.com/dusk-network/kadcast"

exclude = [
    ".git*",
    "ARCHITECTURE.md",
    "architecture.jpg"
]

[dependencies]
arrayvec = "0.7"
blake2 = "0.9"
rand = "0.8"
tokio = { version = "1", features = ["rt", "net", "sync", "time", "io-std", "rt-multi-thread", "macros"] }
raptorq = "1.6"
tracing = "0.1"
itertools = "0.10"
konst = "0.2"
socket2 = "0.4"
serde_derive = "1"
serde = "1"
humantime-serde ="1"

[dev-dependencies]
clap = "2.33.3"
rustc_tools_util = "0.2"
tracing-subscriber = "0.2"
toml = "0.5"

[[example]]
name = "kadcast"
path = "examples/main.rs"
